build/log/idf_py_stdout_output_11354
[1/20] Performing build step for 'bootloader'
[1/1] cd /home/ynghia/CODE/IDF/vinfast/build/bootloader/esp-idf/esptool_py && /home/ynghia/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/ynghia/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ynghia/CODE/IDF/vinfast/build/bootloader/bootloader.bin
Bootloader binary size 0x6870 bytes. 0x790 bytes (7%) free.
[2/18] Building C object esp-idf/driver_sleep_mode/CMakeFiles/__idf_driver_sleep_mode.dir/driver_sleep_mode.c.obj
[3/18] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[4/18] Building C object esp-idf/common_nvs/CMakeFiles/__idf_common_nvs.dir/common_nvs.c.obj
../components/common_nvs/common_nvs.c: In function 'init_info_wifi':
../components/common_nvs/common_nvs.c:21:15: warning: unused variable 'err_ssid' [-Wunused-variable]
   21 |     esp_err_t err_ssid = nvs_set_str(wifi, "SSID", "");
      |               ^~~~~~~~
../components/common_nvs/common_nvs.c:20:15: warning: unused variable 'err_pass' [-Wunused-variable]
   20 |     esp_err_t err_pass = nvs_set_str(wifi, "PASS", "");
      |               ^~~~~~~~
../components/common_nvs/common_nvs.c: In function 'init_info_last_id_payload':
../components/common_nvs/common_nvs.c:28:15: warning: unused variable 'err_open_id' [-Wunused-variable]
   28 |     esp_err_t err_open_id = nvs_open("ID", NVS_READWRITE, &id);
      |               ^~~~~~~~~~~
../components/common_nvs/common_nvs.c: In function 'get_last_id_payload':
../components/common_nvs/common_nvs.c:38:15: warning: unused variable 'err_id' [-Wunused-variable]
   38 |     esp_err_t err_id = nvs_get_u32(id, "ID_LAST", &last_id);
      |               ^~~~~~
../components/common_nvs/common_nvs.c:37:15: warning: unused variable 'err_open' [-Wunused-variable]
   37 |     esp_err_t err_open = nvs_open("ID", NVS_READONLY, &id);
      |               ^~~~~~~~
../components/common_nvs/common_nvs.c: In function 'save_wifi':
../components/common_nvs/common_nvs.c:63:15: warning: unused variable 'err_ssid' [-Wunused-variable]
   63 |     esp_err_t err_ssid = nvs_set_str(wifi, "SSID", ssid);
      |               ^~~~~~~~
../components/common_nvs/common_nvs.c:62:15: warning: unused variable 'err_pass' [-Wunused-variable]
   62 |     esp_err_t err_pass = nvs_set_str(wifi, "PASSWORD", pass);
      |               ^~~~~~~~
../components/common_nvs/common_nvs.c: In function 'get_info_last_wifi':
../components/common_nvs/common_nvs.c:84:39: warning: passing argument 3 of 'nvs_get_i8' from incompatible pointer type [-Wincompatible-pointer-types]
   84 |     nvs_get_i8(config, "FLAG_CONFIG", &flag_reset);
      |                                       ^~~~~~~~~~~
      |                                       |
      |                                       _Bool *
In file included from ../components/common_nvs/include/common_nvs.h:3,
                 from ../components/common_nvs/common_nvs.c:5:
/home/ynghia/esp/esp-idf/components/nvs_flash/include/nvs.h:348:69: note: expected 'int8_t *' {aka 'signed char *'} but argument is of type '_Bool *'
  348 | esp_err_t nvs_get_i8 (nvs_handle_t handle, const char* key, int8_t* out_value);
      |                                                             ~~~~~~~~^~~~~~~~~
[5/18] Building C object esp-idf/admin_menu_congfi/CMakeFiles/__idf_admin_menu_congfi.dir/admin_menu_congfi.c.obj
../components/admin_menu_congfi/admin_menu_congfi.c:127:18: warning: 'stop_webserver' defined but not used [-Wunused-function]
  127 | static esp_err_t stop_webserver(httpd_handle_t server)
      |                  ^~~~~~~~~~~~~~
[6/18] Linking C static library esp-idf/driver_sleep_mode/libdriver_sleep_mode.a
[7/18] Linking C static library esp-idf/common_nvs/libcommon_nvs.a
[8/18] Building C object esp-idf/app_handle_wifi_mode_sta/CMakeFiles/__idf_app_handle_wifi_mode_sta.dir/app_handle_wifi_mode_sta.c.obj
[9/18] Linking C static library esp-idf/admin_menu_congfi/libadmin_menu_congfi.a
[10/18] Linking C static library esp-idf/app_handle_wifi_mode_sta/libapp_handle_wifi_mode_sta.a
[11/18] Building C object esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj
FAILED: esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj 
/home/ynghia/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.4-52-g978d574e5e-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../components/app_request_https/include -I/home/ynghia/esp/esp-idf/components/newlib/platform_include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ynghia/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ynghia/esp/esp-idf/components/heap/include -I/home/ynghia/esp/esp-idf/components/log/include -I/home/ynghia/esp/esp-idf/components/soc/include -I/home/ynghia/esp/esp-idf/components/soc/esp32 -I/home/ynghia/esp/esp-idf/components/soc/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/include -I/home/ynghia/esp/esp-idf/components/hal/platform_port/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include/esp32 -I/home/ynghia/esp/esp-idf/components/esp_rom/esp32 -I/home/ynghia/esp/esp-idf/components/esp_common/include -I/home/ynghia/esp/esp-idf/components/esp_system/include -I/home/ynghia/esp/esp-idf/components/esp_system/port/soc -I/home/ynghia/esp/esp-idf/components/esp_system/port/include/private -I/home/ynghia/esp/esp-idf/components/xtensa/include -I/home/ynghia/esp/esp-idf/components/xtensa/esp32/include -I/home/ynghia/esp/esp-idf/components/lwip/include -I/home/ynghia/esp/esp-idf/components/lwip/include/apps -I/home/ynghia/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ynghia/esp/esp-idf/components/lwip/lwip/src/include -I/home/ynghia/esp/esp-idf/components/lwip/port/include -I/home/ynghia/esp/esp-idf/components/lwip/port/freertos/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ynghia/esp/esp-idf/components/esp-tls -I/home/ynghia/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/ynghia/esp/esp-idf/components/mbedtls/port/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/ynghia/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I../components/app_get_realtime/include -I/home/ynghia/esp/esp-idf/components/esp_netif/include -I/home/ynghia/esp/esp-idf/components/esp_event/include -I../components/common_nvs/include -I/home/ynghia/esp/esp-idf/components/nvs_flash/include -I/home/ynghia/esp/esp-idf/components/esp_partition/include -I/home/ynghia/esp/esp-idf/components/spi_flash/include -I/home/ynghia/esp/esp-idf/components/esp_http_client/include -I/home/ynghia/esp/esp-idf/components/json/cJSON -I../components/app_handle_query/include -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/ynghia/CODE/IDF/vinfast=. -fmacro-prefix-map=/home/ynghia/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj -MF esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj.d -o esp-idf/app_request_https/CMakeFiles/__idf_app_request_https.dir/app_request_https.c.obj   -c ../components/app_request_https/app_request_https.c
../components/app_request_https/app_request_https.c: In function '_http_event_handler':
../components/app_request_https/app_request_https.c:32:9: error: implicit declaration of function 'init_gpio_wakeup' [-Werror=implicit-function-declaration]
   32 |         init_gpio_wakeup();
      |         ^~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
